; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/ffmpeg-mux/extr_ffmpeg-mux.c_set_header.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/ffmpeg-mux/extr_ffmpeg-mux.c_set_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.header = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.header*, i32*, i64)* @set_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_header(%struct.header* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.header*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store %struct.header* %0, %struct.header** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %6, align 8
  %8 = trunc i64 %7 to i32
  %9 = load %struct.header*, %struct.header** %4, align 8
  %10 = getelementptr inbounds %struct.header, %struct.header* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @malloc(i64 %11)
  %13 = load %struct.header*, %struct.header** %4, align 8
  %14 = getelementptr inbounds %struct.header, %struct.header* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load %struct.header*, %struct.header** %4, align 8
  %16 = getelementptr inbounds %struct.header, %struct.header* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @memcpy(i32 %17, i32* %18, i64 %19)
  ret void
}

declare dso_local i32 @malloc(i64) #1

declare dso_local i32 @memcpy(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
